<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#F5F5F5"
        android:hint="@string/Име"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        android:layout_height="48dp"
        android:layout_below="@id/editTextFirstName"
        android:layout_marginTop="88dp"
        android:autofillHints=""
        android:background="#F5F5F5"
        android:hint="@string/Фамилия"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        android:layout_height="48dp"
        android:layout_below="@id/editTextLastName"
        android:layout_marginTop="144dp"
        android:autofillHints=""
        android:background="#F5F5F5"
        android:hint="@string/Телефон"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="531dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F5F5F5" >

            <Button
                android:id="@+id/btnAddContact"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/add_new_contact"
                android:drawableLeft="@android:drawable/ic_menu_add"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnSearchContact"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/search_contact"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:text="@string/search" />

            <Button
                android:id="@+id/btnDeleteContact"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/delete_contact"
                android:drawableLeft="@android:drawable/ic_menu_delete"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="478dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/listViewContacts"
                android:layout_width="406dp"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="452dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>